# robust-stats

./: .gitignore  Cargo.toml  Makefile  README.md  environment.yml  pyproject.toml
.benchmarks/basic_mean/: Cargo.toml  Makefile  README.md  bench_means.py  benchmark.py  pyproject.toml
.benchmarks/basic_mean/src/: lib.rs
.github/workflows/: CI.yml
robust_stats/: __init__.py  robust_mean.py
src/: lib.rs  matrix.rs  mean.rs  python_bindings.rs  robust-stats.rs  robust_mean.rs
src/math/: svd.rs  utils.rs
src/robust/mean/: mean.rs  mod.rs  robust_mean_filter.rs  robust_mean_heuristic.rs  robust_mean_pgd.rs
test/: bench_means.py  test_robust_mean.py  test_utils.py
