[package]
name = "robust-stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "robust_stats"
crate-type = ["cdylib"]
path = "src/robust-stats.rs"

[dependencies]
lapack = "0.19.0"
nalgebra = "0.32.3"
ndarray-linalg = "0.16.0"
numpy = "0.20.0"
pyo3 = { version = "0.20", features = ["extension-module"] }
