[package]
name = "robust-stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "robust_stats"
crate-type = ["cdylib"]
path = "src/robust-stats.rs"

[features]
openblas = ["ndarray-linalg/openblas"]

[dependencies]
cblas = "0.4.0"
ndarray-linalg = "0.16.0"
ndarray-stats = "0.5.1"
numpy = "0.20.0"
ordered-float = "4.1.1"
priority-queue = "1.3.2"
pyo3 = { version = "0.20" }
