[package]
name = "robust-stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "robust_stats"
crate-type = ["cdylib"]
path = "src/robust-stats.rs"

[dependencies]
cblas = "0.4.0"
eigenvalues = "0.4.0"
lapack = "0.19.0"
nalgebra = "0.32.3"
ndarray = "0.15.6"
# ndarray-linalg = "0.16.0"
ndarray-linalg = { version = "0.16", features = ["openblas-static"] }
ndarray-stats = "0.5.1"
numpy = "0.20.0"
openblas-src = "0.10.8"
ordered-float = "4.1.1"
priority-queue = "1.3.2"
pyo3 = { version = "0.20" }
special = "0.10.2"
